tests/valid_inputs/void_f_wo_ret.cpp

void void_func() {

}

int main() {
	void_func();
}
