tests/invalid_inputs/parsing/var_name_as_class.cpp

struct Foo {

};

int main() {
	int Foo;
}
